...
                Количество сыгранных квизов: \(statisticServise.gamesCount) \
                Рекорд: \(statisticServise.bestGame.correct )/\(statisticServise.bestGame.total) (\(dateFormater.string(from: statisticServise.bestGame.date))) \
                Средняя точность: \(String(format: "%.2f", statisticServise.totalAccuracy)) %
                """
                
                let viewModel = QuizResultsViewModel(
                    title: "Этот раунд окончен!",
                    text: text,
                    buttonText: "Сыграть ещё раз")
                viewController?.show(quiz: viewModel)
            }
            
        } else {
...
